--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="wallpapers_text">Wallpapers</string>
     <string name="empty_text">text here</string>
-    <string name="search_header_text">Search Photo</string>
+    <string name="search_header_text">Search Wallpaper</string>
 </resources>
